--- a/templates/index.html
+++ b/templates/index.html
@@ -61,5 +61,22 @@
         '<button class="btn btn-primary mt-4" type="button" disabled> <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Finding all MP3 files </button>';
     }
   });
+
+  async function getRequest(url = '') {
+    const response = await fetch(url, {
+      method: 'GET',
+      cache: 'no-cache',
+    });
+    return response.json();
+  }
+  document.addEventListener('DOMContentLoaded', function () {
+    let url = document.location;
+    let route = '/flaskwebgui-keep-server-alive';
+    let interval_request = 3 * 1000; //sec
+    function keep_alive_server() {
+      getRequest(url + route).then((data) => console.log(data));
+    }
+    setInterval(keep_alive_server, interval_request)();
+  });
 </script>
 {% endblock %}
